# unicel

./: .gitattributes  .gitignore  BUGFIX_LONG_UNIT_NAMES.md  CEILING_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IOS_BUILD_FIX_GUIDE.md  IOS_SETUP_STATUS.md  LICENSE-MIT  MOBILE_UI_IMPLEMENTATION_REPORT.md  PROJECT_PLAN.md  QUICK_TEST_GUIDE.md  README.md  RELEASE_NOTES.md  TASKS.md  TODO.md  fix-xcode-setup.sh  iOS_CRITICAL_FIXES_REPORT.md  iOS_FILE_HANDLING_IMPLEMENTATION.md  iOS_FILE_HANDLING_TEST_RESULTS.md  iOS_TESTING_CHECKLIST.md  index.html  package.json  tailwind.config.js  vite.config.ts
.claude/agents/: architecture-guide.md  code-reviewer.md  commit-gatekeeper.md  formula-builder.md  ios-deployment-manager.md  ios-platform-setup.md  juggalo-responder.md  mobile-ui-specialist.md  release-manager.md  test-runner.md  ui-builder.md  unit-debugger.md
.claude/commands/: add-formula.md  add-ui-component.md  add-unit.md  check-build.md  create-release.md  debug-conversion.md  explore-architecture.md  fix-unit-bug.md  optimize-performance.md  review-changes.md  test-units.md  update-tasks.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  release.yml
docs/: DEMO_SCRIPT.md  MCP_SERVER.md  MCP_TOOL_DESIGN.md  MOBILE_TESTING.md  PROJECT_PLAN.md  TASKS.md  USER_GUIDE.md  iOS_DEVELOPMENT.md  ios-deployment.md  xcode-archive-fix.md  xcode-cloud-setup.md
docs/app-store/: APP_ICONS_INVENTORY.md  APP_STORE_METADATA.md  APP_STORE_SUBMISSION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  INDEX.md  MANUAL_STEPS_REQUIRED.md  PRIVACY_POLICY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SCREENSHOT_GUIDE.md  SUPPORT.md  TESTFLIGHT_GUIDE.md  WEEK_29_COMPLETION_GUIDE.md  WEEK_29_SUMMARY.md
docs/ios/: ACCESSIBILITY.md  BUILD_SELF_CONTAINED_APP.md  CODE_SIGNING_GUIDE.md  DEPLOYMENT_QUICK_START.md  DEVICE_TESTING_MATRIX.md  HUMAN_TASK_FILE_ASSOCIATIONS.md  HUMAN_TASK_ICLOUD_SETUP.md  HUMAN_TASK_TESTFLIGHT.md  KEYBOARD_SHORTCUTS.md  MANUAL_TESTING_CHECKLIST.md  PERFORMANCE_TESTING.md  README.md  WEEK_25_iOS_PLATFORM_SETUP.md  WEEK_28_IPAD_OPTIMIZATION_COMPLETE.md  iOS_SETUP_COMPLETE.md
examples/: ceiling_function_examples.md  construction_estimator.usheet  formula_functions_showcase.usheet
requirements/: Unit Aware Spreadsheet Design.md
requirements/use cases/: AWS Pricing Use Case.md  Construction Estimator Use Case.md  Investment Portfolio Use Case.md
scripts/: build_ios_release.sh  capture_ios_screenshots.sh  ios-build-release.sh  test-ios-simulator.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: aws_cost_estimator.rs  aws_cost_estimator.usheet  construction_estimator.rs  formula_functions_showcase.rs  investment_portfolio.rs  investment_portfolio.usheet  test_chained_formulas.rs  test_complex_cancellation.rs  test_long_unit_names.rs  test_multi_hop.rs  test_sum_recalc.rs  test_unit_cancellation.rs  test_user_input_cancellation.rs  test_workbook_sum.rs  unit_conversion_tutorial.rs  unit_conversion_tutorial.usheet
src-tauri/icons/: icon.icns
src-tauri/scripts/: patch-ios-info-plist.sh
src-tauri/src/: app_builder.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  workbook.rs
src-tauri/src/core/: cell_input.rs  mod.rs  settings.rs
src-tauri/src/core/cell/: mod.rs
src-tauri/src/core/conversion/: mod.rs
src-tauri/src/core/formula/: ast.rs  evaluator.rs  formula.pest  mod.rs  parser.rs
src-tauri/src/core/table/: mod.rs  sheet.rs
src-tauri/src/core/units/: library.rs  mod.rs  parser.rs
src-tauri/src/core/workbook/: mod.rs
src-tauri/src/formats/: excel.rs  json.rs  mod.rs
src-tauri/src/formats/excel/: mod.rs
src-tauri/src/formats/json/: mod.rs
src-tauri/src/mcp/: mod.rs  tools.rs  types.rs
src-tauri/src/mcp/client/: mod.rs
src-tauri/src/mcp/server/: mcp_server.rs  mod.rs  server.rs
src-tauri/src/standalone/: mcp-server.rs
src-tauri/tests/: ceiling_function.rs  compound_unit_exponents.rs  conversion_aware_arithmetic.rs  error_handling.rs  excel_conversion_arithmetic.rs  excel_conversion_manual_check.rs  excel_string_concatenation.rs  insert_delete_columns_rows.rs  long_unit_names.rs  mcp_integration.rs  percentage_bug_test.rs  percentage_test.rs  quarter_year_conversion.rs  runtime_conversion_arithmetic.rs  string_concatenation.rs  workbook_integration.rs
src/api/: tauri.ts
src/components/: DeleteConfirmDialog.tsx  ExamplePickerDialog.tsx  Grid.tsx  GridContextMenu.tsx  LoadingSpinner.tsx  NamedRangesDialog.tsx  Ribbon.tsx  Spreadsheet.tsx  StatusBar.tsx  Toast.tsx  Tooltip.tsx  UnitPreferencesDialog.tsx
src/components/mobile/: ErrorBoundary.tsx  ExamplePicker.tsx  FilePicker.tsx  KeyboardShortcuts.tsx  LoadingSpinner.tsx  MobileApp.tsx  MobileGrid.tsx  MobileStatusBar.tsx  MobileToolbar.tsx  iPadSplitView.tsx
src/hooks/: useAccessibility.ts  useFileOpening.ts  useMobile.ts  useOrientation.ts  useVirtualScroll.ts
src/types/: workbook.ts
src/utils/: deviceDetection.ts  haptics.ts  performance.ts
tools/tauri-options-daemon/: Cargo.toml
tools/tauri-options-daemon/src/: main.rs
