[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Unicel Contributors"]
repository = "https://github.com/yourusername/unicel"

[workspace.dependencies]
# Tauri
tauri = { version = "2.1" }
tauri-build = "2.0"
tauri-plugin-dialog = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP for MCP
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"
