[package]
name = "unicel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unit-aware spreadsheet application"
default-run = "unicel"

[lib]
name = "unicel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "unicel"
path = "src/main.rs"

# MCP server binary (build separately with: cargo build --bin unicel-mcp-server)
# Moved out of src/bin/ to prevent automatic discovery by Cargo
[[bin]]
name = "unicel-mcp-server"
path = "src/standalone/mcp-server.rs"
required-features = ["build-mcp-server"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Workspace dependencies
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies
uuid = { version = "1.11", features = ["v4", "serde"] }
indexmap = "2.7"
arboard = "3.4"
rust_xlsxwriter = "0.79"

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
build-mcp-server = []  # Enable to build the standalone MCP server binary
