[package]
name = "unicel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unit-aware spreadsheet application"
default-run = "unicel"

[lib]
name = "unicel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "unicel"
path = "src/main.rs"

# NOTE: MCP server binary has been moved to src/standalone/mcp-server.rs
# It is intentionally NOT declared here to prevent Tauri from bundling it with the app.
# To build it separately, add this to Cargo.toml:
# [[bin]]
# name = "unicel-mcp-server"
# path = "src/standalone/mcp-server.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Workspace dependencies
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies
uuid = { version = "1.11", features = ["v4", "serde"] }
indexmap = "2.7"
arboard = "3.4"
rust_xlsxwriter = "0.79"
statrs = "0.17"

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
